@@ -177,8 +177,8 @@ QString ImportSGF::RemoveSigilStyles( const QString &style_source )
 QString ImportSGF::CreateHeader( const QList< Resource* > &style_resources )
 {
     QString header = "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n"
-                     "<!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 Strict//EN\"\n"
-                     "    \"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd\">\n\n"							
+                     "<!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.1//EN\"\n"
+                     "    \"http://www.w3.org/TR/xhtml1/DTD/xhtml11.dtd\">\n\n"						
                      "<html xmlns=\"http://www.w3.org/1999/xhtml\">\n"
                      "<head>\n";
 
